- decrese selector priority for default rating container width;

--- a/src/chrome_ext/css/ytvpStyle.css
+++ b/src/chrome_ext/css/ytvpStyle.css
@@ -21,7 +21,7 @@
 .ytVideoPreview-ratingContainer .ytVideoPreview-ratingDislikes {
 	background: rgb(255, 0, 0);
 }
-.video-thumb.ux-thumb.ytVideoPreview-videoKnown  .ytVideoPreview-ratingContainer {
+.ytVideoPreview-ratingContainer {
 	width: 100%;
 }
 .yt-thumb-default-370 .ytVideoPreview-ratingContainer {
