- remove option for showing previews at real size;

--- a/src/chrome_ext/css/ytSite.css
+++ b/src/chrome_ext/css/ytSite.css
@@ -114,7 +114,7 @@ a:hover {
 }
 .site_pages {
 	-webkit-transition: all .5s ease-in-out;
-	-moz-transition: all .5s ease-in-out;
+	transition: all .5s ease-in-out;
 }
 .site_pages p {
 	text-indent: 20px;
